# apertium-nor-eng

./: .gitattributes  .gitignore  AUTHORS  Makefile  Makefile.am  README  apertium-no-en.no-en.dix  apertium-no-en.no-en.lex  apertium-no-en.no-en.lrx  apertium-no-en.no-en.t1x  apertium-no-en.no-en.t2x  apertium-no-en.no-en.t3x  apertium-nor-eng.nor-eng.dix  apertium-nor-eng.nor-eng.lex  apertium-nor-eng.nor-eng.lrx  apertium-nor-eng.nor-eng.t1x  apertium-nor-eng.nor-eng.t2x  apertium-nor-eng.nor-eng.t3x  configure.ac  modes.xml  pending-tests.sh  regression-tests.sh  wiki-tests.sh
dev/: RULES-AND-MULTIWORDS  apertium-no-en.no-en.lrx  bilingual-summary.txt  generation-report.txt  generation-test.sh  inconsistency.sh  lexconcdh1.xml  missing-bidix-freq.sh  testsentences  testvoc.sh
dev/bidix/: 400_high_freq_nouns.dix  pending_adjectives.txt  pending_adverbs.txt  pending_conjunctions.txt  pending_determiners.txt  pending_nouns.txt  pending_numerals.txt  pending_prepositions.txt  pending_pronouns.txt  pending_proper_nouns.txt  pending_verbs.txt
test/: eng-nno-generator-expected.txt  eng-nno-generator-gold.txt  eng-nno-interchunk-expected.txt  eng-nno-lex-expected.txt  eng-nno-morph-expected.txt  eng-nno-postchunk-expected.txt  eng-nno-pretransfer-expected.txt  nno-eng-biltrans-expected.txt  nno-eng-disam-expected.txt  nno-eng-generator-expected.txt  nno-eng-input.txt  nno-eng-interchunk-expected.txt  nno-eng-morph-expected.txt  nno-eng-postchunk-expected.txt  nno-eng-postgen-gold.txt  nno-eng-tagger-expected.txt  nob-eng-pending-biltrans-expected.txt  nob-eng-pending-chunker-expected.txt  nob-eng-pending-disam-expected.txt  nob-eng-pending-generator-expected.txt  nob-eng-pending-input.txt  nob-eng-pending-interchunk-expected.txt  nob-eng-pending-lex-expected.txt  nob-eng-pending-morph-expected.txt  nob-eng-pending-postchunk-expected.txt  nob-eng-pending-postgen-expected.txt  nob-eng-pending-postgen-gold.txt  nob-eng-pending-pretransfer-expected.txt  nob-eng-pending-tagger-expected.txt  nob-eng-regression-chunker-expected.txt  nob-eng-regression-disam-expected.txt  nob-eng-regression-generator-expected.txt  nob-eng-regression-input.txt  nob-eng-regression-lex-expected.txt  nob-eng-regression-morph-expected.txt  nob-eng-regression-postchunk-expected.txt  nob-eng-regression-postgen-expected.txt  nob-eng-regression-postgen-gold.txt  nob-eng-regression-pretransfer-expected.txt  tests.json
